# GaussianSplattingHumanMotionModelCloud

./: .gitattributes  BUG_REPORT.md  BVH.cpp  BVH.h  CMakeLists.txt  CODEX_INSTRUCTIONS.md  DEV_BRIEF.md  EVAL.md  GSModel.h  GSModelTest.cpp  GSModelTest.h  GSModelTestMain.cpp  GSModel_core.cpp  GSModel_dump.cpp  GSModel_generate.cpp  GSModel_train.cpp  GUARD_EDIT_SCOPE.md  HumanBody.cpp  HumanBody.h  README.md  SimpleHuman.cpp  SimpleHuman.h  eval.py  run.sh
analysis/: gen_trace_summary.md
motion_rikiya/: I25.bvh
vecmath/: Color3.h  Color4.h  Point2.h  Point3.h  Point4.h  Quat4_.h  TexCoord2.h  Vector2.h  Vector3.h  Vector4.h  VmUtil.h  vm_conf.h
